--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../src/style/global.css">
     <title>React Shop</title>
 </head>
 <body>
-    <div id="app">hola</div>
+    <div id="app"></div>
 </body>
 </html>
